# WeReply

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TAURI_REACT_STANDARDS.md  package-lock.json  package.json  通用规则文件.md
.claude/: CLAUDE.md  settings.json
.claude/agents/: README.md  formula-optimization-specialist.md  react-frontend-specialist.md  rust-backend-specialist.md  security-auditor.md  test-automation-specialist.md
.claude/commands/: check.md  context-prime.md  optimize.md
.claude/hooks/: hooks.json
.claude/rules/: 01-project-overview.md  02-rust-backend-standards.md  03-react-frontend-standards.md  04-configuration-standards.md  05-lsp-usage-standards.md  06-security-standards.md  07-testing-standards.md  08-performance-standards.md  09-parallel-agents-standards.md  README.md
.claude/skills/: README.md
.cursor/rules/: global_rules.mdc
.cursor/skills/: README.md
.trae/rules/: project_rules.md
docs/: ai-deepseek.md  architecture.md  configuration.md  ipc.md  logging.md  platforms.md  requirements.md  roadmap.md  security.md  tauri-api.md  testing.md  ui-flow.md
docs/plans/: 2026-01-23-auto-install-wxauto.md  2026-01-23-complete-implementation.md  2026-01-23-connection-diagnostics.md  2026-01-23-deepseek-model-selection-design.md  2026-01-23-deepseek-model-selection.md  2026-01-23-embed-python.md  2026-01-23-ui-simplify.md  2026-01-23-wereply-complete-implementation-design.md  2026-01-23-wereply-design.md  2026-01-23-wereply-scaffold-implementation.md  2026-01-26-listen-targets.md  2026-01-26-uia-automation-design.md  2026-01-26-uia-automation-implementation.md  2026-01-27-standardize-message-notifications-design.md  2026-01-27-standardize-message-notifications.md
platform_agents/macos/: scripts.applescript  wechat_agent.swift
platform_agents/windows/: requirements.txt  wxauto_agent.py
src/: App.css  App.tsx  bindings.test.ts  bindings.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.dev.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  bindings.rs  config.rs  deepseek.rs  ipc.rs  lib.rs  listen_targets.rs  logging.rs  main.rs  message_pipeline.rs  secret.rs  state.rs  types.rs
src-tauri/src/ui_automation/: mod.rs  tests.rs  types.rs
src-tauri/src/ui_automation/macos/: ax.rs  ax_learn.rs  ax_path.rs  ax_snapshot.rs  db.rs  element.rs  input_box.rs  message_watch.rs  mod.rs  session_list.rs  static_ui_paths.rs  tests.rs  ui_paths_store.rs
src-tauri/src/ui_automation/windows/: element.rs  input_box.rs  message_watch.rs  mod.rs  session_list.rs  tests.rs  uia.rs
src-tauri/tests/: bindings_generate.rs
src/utils/: apiKey.test.ts  apiKey.ts  apiKeyVisibility.test.ts  apiKeyVisibility.ts  diagnostics.test.ts  diagnostics.ts  labels.test.ts  labels.ts  listenTargets.test.ts  listenTargets.ts  models.test.ts  models.ts  notify.test.ts  notify.ts  recentChats.test.ts  reply.ts  (+6 more)
(+21 files in other folders)
