[package]
name = "wereply"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "wereply"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wereply_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls-native-roots"] }
zip = "0.6"

[dependencies]
anyhow = "1.0"
keyring = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
specta = { version = "1", features = ["serde", "functions", "typescript"] }
tauri = { version = "2.9.5", features = [] }
tauri-plugin-opener = "2.5.3"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_ProcessStatus"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
core-foundation = "0.9"
core-graphics = "0.23"

[dev-dependencies]
tempfile = "3"
